<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PacketScannerPackage.PacketScannerActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:id="@+id/dangerousIngredientRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/dangerousIngredientRowIcon"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="@drawable/circular_image"
                    android:backgroundTint="@color/red"
                    android:padding="20dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/ic_baseline_not_interested_24" />

                <TextView
                    android:id="@+id/scanDataDangerousIngredientTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:textColor="#000000"
                    android:textSize="24sp" />

            </TableRow>

            <TableRow
                android:id="@+id/warningIngredientRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/warningIngredientRowIcon"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:adjustViewBounds="false"
                    android:background="@drawable/circular_image"
                    android:backgroundTint="@color/orange"
                    android:cropToPadding="false"
                    android:padding="20dp"
                    android:scaleType="fitXY"
                    android:scrollbarAlwaysDrawHorizontalTrack="false"
                    app:srcCompat="@drawable/ic_baseline_warning_24" />

                <TextView
                    android:id="@+id/scanDataWarningIngredientTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="-247dp"
                    android:layout_weight="1"
                    android:textColor="#000000"
                    android:textSize="24sp" />

            </TableRow>

            <TableRow
                android:id="@+id/safeIngredientRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/safeIngredientRowIcon"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:adjustViewBounds="false"
                    android:background="@drawable/circular_image"
                    android:backgroundTint="@color/green"
                    android:cropToPadding="false"
                    android:padding="20dp"
                    android:paddingTop="2dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/ic_baseline_check_24" />

                <TextView
                    android:id="@+id/scanDataSafeIngredientTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="-406dp"
                    android:layout_weight="1"
                    android:textColor="#000000"
                    android:textSize="24sp" />
            </TableRow>

        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/openScanButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:foreground="@drawable/circular_button"
        android:onClick="buttonStart"
        android:padding="15dp"
        android:theme="@style/Theme.RoundedButton" />

</RelativeLayout>