...
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp">

                        <Button
                            android:id="@+id/dashboard_packet_scanner_button"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@color/design_default_color_on_primary"
                            android:padding="5dp"
                            android:text="Packet Scanner"
                            android:textAlignment="center"
                            android:textColor="@color/design_default_color_primary"
                            android:textSize="24sp" />

                        <Button
                            android:id="@+id/dashboard_restaurant_review_button"
...
