<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="false"
        android:layout_alignParentRight="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:minWidth="400dp"
        android:minHeight="340dp"
        android:onClick="buttonStart" />

    <Button
        android:id="@+id/captureScanButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@id/surfaceView"
        android:layout_alignParentLeft="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="false"
        android:layout_centerInParent="true"
        android:layout_marginTop="-105dp"
        android:foreground="@drawable/circular_button"
        android:onClick="buttonStart"
        android:theme="@style/Theme.RoundedButton" />
</RelativeLayout>